objects/ASI_TnE_ProxyDriving_Statement_Upload__c.object
<CustomObject>
    <description>Korea Proxy Driving Claim Upload</description>
    <fields>
        <fullName>ASI_TnE_KR_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_BasicCost__c</fullName>
        <label>Basic Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Departure_Place__c</fullName>
        <label>Departure Place</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Departure_Time__c</fullName>
        <label>Departure Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Destination_Place__c</fullName>
        <label>Destination Place</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Destination_Time__c</fullName>
        <label>Destination Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Employee_No__c</fullName>
        <label>Employee No</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_First_Dest__c</fullName>
        <label>1st Destination</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Month__c</fullName>
        <description>For making a External ID</description>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Phone_No__c</fullName>
        <label>Phone No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Proxy_Agency_Code__c</fullName>
        <label>Proxy Agency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_RoutingCost__c</fullName>
        <label>Routing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Statement_Date__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_UsageDate__c</fullName>
        <label>Usage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_WOC__c</fullName>
        <label>Waiting &amp; Other Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Proxy Driving Claim Upload</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ProxryDriving Stat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proxy Driving Claim Upload</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_KR_ProxyDriving</fullName>
        <active>true</active>
        <label>KR Proxy Driving</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>